# joshtalks_backend_assignment

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
core/: admin.py  asgi.py  urls.py  wsgi.py
core/apis/task/: __init__.py  view.py
core/apis/team/: __init__.py  view.py
core/apis/user/: __init__.py  view.py
core/migrations/: 0001_initial.py
core/models/: __init__.py  task.py  user.py
core/models/task/: __init__.py  model.py  permission.py  serializer.py
core/models/team/: __init__.py  model.py  permission.py  serializer.py
core/models/user/: __init__.py  model.py  serializer.py
core/serializers/: __init__.py  task.py  user.py
core/settings/: __init__.py  base.py
scripts/: setup.sh  start.sh
tests/: test_req.py
