[project]
name = "joshtalks-backend-assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.7",
    "django-restframework>=0.0.1",
    "djangorestframework-simplejwt>=5.5.0",
    "dotenv>=0.9.9",
    "requests>=2.32.3",
]
